[package]
name = "photo-rust"
version = "0.1.0"
authors = ["David Lin <davidforest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
walkdir = "2.3.1"
pickledb = "0.4.0"
indicatif = "0.14.0"
md5 = "0.7.0"
serde = "1.0.104"
read_input = "0.8.4"
colored = "1.9.3"